Kubernetes/apps/traffic-app/02-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: traffic-svc
  labels:
    app: traffic-app
spec:
  selector:
    app: traffic-app
  ports:
    - name: http
      protocol: TCP
      port:  80
      targetPort: 80
