Kubernetes/apps/traffic-app/03-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traffic-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`splautz.com`) && Path(`/traffic-app`)
      services:
        - name: traffic-app-svc
          port: 80
  tls:
    certResolver: le
